# librarian

./: .gitignore  Cargo.toml  README.md  REFACTOR_TICKETS.md
.github/workflows/: ci.yml  release.yml
crates/librarian-app/: Cargo.toml  build.rs
crates/librarian-app/src/: columns.rs  config.rs  ellipsis.rs  icons.rs  main.rs  metrics.rs  rows.rs  search.rs  selection.rs  theme.rs  thumbs.rs  tree.rs
crates/librarian-core/: Cargo.toml
crates/librarian-core/src/: enumerate.rs  history.rs  lib.rs  matcher.rs  model.rs  sort.rs
crates/librarian-win/: Cargo.toml
crates/librarian-win/src/: chrome.rs  com.rs  drives.rs  fileop.rs  icon.rs  known.rs  lib.rs  open.rs  util.rs  wsl.rs
docs/: crash_class_review_filepilot.md  debug_log.md  phase2_simplify_review.md
scripts/: README.md  install-ripgrep.ps1
