[package]
name = "librarian-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "librarian"
path = "src/main.rs"

[dependencies]
librarian-core.workspace = true
librarian-win.workspace = true
iced.workspace = true
chrono = "0.4"
notify-debouncer-mini = "0.7.0"

# Embeds the application icon as a Win32 resource (so the .exe shows it in
# Explorer / on shortcuts). Windows-only; see build.rs.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
