[package]
name = "librarian-win"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
] }
